--- a/tablazat.html
+++ b/tablazat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autok</title>
-    <link rel="stylesheet" href="megjelenes.css">
+    <link rel="stylesheet" href="megjelenes2.css">
 </head>
 <body>
     <main>
@@ -16,8 +16,30 @@
             <a href="erdekesegek.html">10 érdekesség régi autókról</a>
             <a href="tablazat.html">Év autói</a>
         </nav>
-        <aside id="baltartalom">
-
+        <aside id="baltartalom2">
+            <table>
+                <tr id="cimsor">
+                    <th>Év</th>
+                    <th>Első</th>
+                    <th>Pontszám</th>
+                </tr>
+                <tr>
+                    <td>1964</td>
+                    <td>Rover 2000</td>
+                    <td>76</td>
+                </tr>
+                <tr>
+                    <td>1965</td>
+                    <td>Austin 1800</td>
+                    <td>78</td>
+                </tr>
+                <tr>
+                    <td>1966</td>
+                    <td>Renault 16</td>
+                    <td>98</td>
+                </tr>
+            </table>
+            <p>Forrás:</p><a href="https://hu.wikipedia.org/wiki/Az_%C3%89v_Aut%C3%B3ja_d%C3%ADj">https://hu.wikipedia.org/wiki/Az_%C3%89v_Aut%C3%B3ja_d%C3%ADj</a>
         </aside>
         <aside id="jobbtartalom">
             <img src="https://megaport.hu/media/king-include/uploads/2020/01/1936-auburn-slowburn-2427736380.jpg" alt="auburn-slowburn" class="autok">
