--- a/tablazat.html
+++ b/tablazat.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autok</title>
     <link rel="stylesheet" href="megjelenes2.css">
+    <link rel="stylesheet" href="tablazat.css">
 </head>
 <body>
     <main>
